<resources>
    <string name="app_name">AppChatDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Đăng ký</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="select_user">Select User</string>
    <string name="select_guest">Select Guest</string>
    <string name="create_new_account">Tạo tài khoản mới</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="log_in_to_your_account">Đăng nhập bằng tài khoản của bạn</string>
    <string name="create_account">Bạn chưa đăng ký ? </string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="password">Mật khẩu</string>
    <string name="change_password_e">Đổi mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="email">Email</string>
    <string name="name">Tên người dùng</string>
    <string name="input_image">Input Image</string>
    <string name="type_a_message">Hãy nhập một tin nhắn</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="forgot_password_detail">Nhập email của bạn ở dưới </string>
    <string name="messenger">Tin nhắn</string>
    <string name="group_name">Nhập tên group</string>
    <string name="add_group_member">Thêm thành viên</string>
    <string name="add_group_chat">Tạo hội thoại</string>
    <string name="group_chat_name">Tên nhóm</string>
    <string name="number_of_member">Số thành viên</string>
    <string name="friend_name">Tên bạn</string>
    <string name="user_name">Tên người dùng</string>
    <string name="search_member">Tìm kiếm thành viên</string>
    <string name="update">Cập nhật</string>
    <string name="search_user">Tìm kiếm người dùng</string>
    <string name="welcome">Chào mừng</string>
    <string name="group_created">Thêm thành viên</string>
    <string name="option">Tiện ích</string>
    <string name="np">NP</string>
    <string name="project">Dự án</string>
    <string name="loading">Đang tải…</string>
    <string name="sending">Đang gửi…</string>
    <string name="checking">Đang kiếm tra…</string>
    <string name="regex_username">[a-zA-Z_ÀÁÂÃÈÉÊÌÍÒÓÔÕÙÚĂĐĨŨƠàáâãèéêìíòóôõùúăđĩũơƯĂẠẢẤẦẨẪẬẮẰẲẴẶẸẺẼỀỀỂưăạảấầẩẫậắằẳẵặẹẻẽềềểỄỆỈỊỌỎỐỒỔỖỘỚỜỞỠỢỤỦỨỪễệỉịọỏốồổỗộớờởỡợụủứừỬỮỰỲỴÝỶỸửữựỳỵỷỹ ?]*</string>
    <string name="forgot_enter_status">Bạn quên nhập trạng thái kìa</string>
    <string name="regex_status_error">Trạng thái không được chứa ký tự đặc biệt</string>
    <string name="status_length_error">Tên người dùng không được vượt quá 50 ký tự</string>
    <string name="regex_username_error">Tên người dùng không được chứa ký tự đặc biệt</string>
    <string name="username_length_error">Tên người dùng không được vượt quá 50 ký tự</string>
    <string name="empty_email_error">Bạn quên nhập email kìa</string>
    <string name="empty_password_error">Mật khẩu không được để trống</string>
    <string name="empty_confirm_password_error">Vui lòng xác nhận mật khẩu</string>
    <string name="regex_password">[a-zA-Z0-9_?]*</string>
    <string name="regex_password_error">Độ dài mật khẩu nằm trong khoảng 6 đến 30 ký tự và không chứa ký tự đặc biệt</string>
    <string name="pass_dif_cpass_error">Mật khẩu không giống</string>
    <string name="signing_up">Đang đăng ký…</string>
    <string name="update_profile_success">Cập nhật thông tin thành công</string>
    <string name="update_profile_fail">Cập nhật thông tin thất bại</string>
    <string name="profile_title_dialog">Bạn có muốn cập nhật thông tin cá nhân không ?</string>
    <string name="exit_title_dialog">Bạn có muốn thoát ứng dụng không ?</string>
    <string name="update_ok">Bấm OK để cập nhật</string>
    <string name="exit_ok">Bấm OK để thoát !</string>
    <string name="message">Tin nhắn</string>
    <string name="invalid_information">Thông tin không hợp lệ</string>
    <string name="list_user">Danh sách người dùng</string>
    <string name="sign_up_success">Đăng ký thành công</string>
    <string name="used_email_el">The email address is already in use by another account.</string>
    <string name="used_email_vn">Tài khoản đã được sử dụng</string>
    <string name="format_email_el">The email address is badly formatted.</string>
    <string name="format_email_vn">Địa chỉ email bị sai định dạng</string>
    <string name="block_request_el">We have blocked all requests from this device due to unusual activity. Try again later.</string>
    <string name="block_request_vn">Chúng tôi đã chặn tất cả các yêu cầu từ thiết bị này do hoạt động bất thường. Thử lại sau</string>
    <string name="invalid_password_el">The password is invalid or the user does not have a password.</string>
    <string name="invalid_passwrd_vn">Mật khẩu không hợp lệ hoặc nhập sai mật khẩu</string>
    <string name="exist_account_el">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="exist_account_vn">Vui lòng kiểm tra lại mail</string>
    <string name="exist_account_login_vn">Sai thông tin đăng nhập</string>
    <string name="send_reset_password_success">"Vui lòng kiểm tra email của bạn \nHệ thống đã gửi đường link làm mới mật khẩu đến email của bạn"</string>
    <string name="no_data">Chưa có dữ liệu</string>
    <string name="file_size">Dung lượng file vượt quá 20MB</string>
    <string name="logout">Đăng xuất</string>
    <string name="password_length">Mật khẩu phải có ít nhất 6 kí tự</string>
    <string name="validate_name">Bạn cần nhập tên người dùng</string>
    <string name="validate_email">Bạn cần nhập email</string>
    <string name="duplicate_password">Mật khẩu trùng nhau</string>
    <string name="validate_password">Mật khẩu phải có ít nhất 6 kí tự</string>
    <string name="validate_repassword">Mật khẩu phải có ít nhất 6 kí tự</string>
    <string name="private_chat">Chat riêng tư</string>
    <string name="group_chat">Chat nhóm</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_profile">Cá nhân</string>
    <string name="nav_member">Thành viên</string>
    <string name="send_repassword">Tiếp tục</string>
    <string name="validate_group_name">Tên nhóm không được để trống</string>
    <string name="create_group_success">Tạo nhóm thành công"</string>
    <string name="validate_group_member">Nhóm phải có hơn 2 thành viên trở lên</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="status">Trạng thái</string>
    <string name="change_pass_dialog">Đổi mật khẩu thành công. Bạn có muốn duy trì đăng nhập không.</string>
    <string name="notice">Thông báo</string>
    <string name="signin_network">Bạn cần kết nối mạng để đăng nhập</string>
    <string name="signup_network">Bạn cần kết nối mạng để đăng ký</string>
    <string name="forgot_network">Bạn cần kết nối mạng để thực hiện lấy lại mật khẩu</string>
    <string name="oops">OOPS!</string>
    <string name="no_internet">Mất kết nối mạng</string>
    <string name="check_internet">Vui lòng kiểm tra kết nối mạng của bạn</string>
    <string name="retry">Thử lại</string>
    <string name="ok">OK</string>
    <string name="information_group">Thông tin thành viên nhóm</string>

</resources>